fixed side panel size, but the website is still too long bc we have 8 grid rows

--- a/styles.css
+++ b/styles.css
@@ -68,16 +68,20 @@ a {
 #side-nav {
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 8;
+    /*grid-row-start: 1;
+    grid-row-end: 8;*/
+    grid-row: 1 / 4;
     border-radius: 10px;
 }
 
 #announcements {
-    grid-row-start: 1;
-    grid-row-end: 8;
+    /*grid-row-start: 1;
+    grid-row-end: 8;*/
+    grid-row: 1 / 4;
     grid-column-start: 7;
     grid-column-end: 8;
+    padding-left: 10px;
+    text-align: left;
 }
 
 .project-element {
